@@ -1,0 +1,4 @@
+Makes it incredibly easy to build interactive web applications with R.
+Automatic "reactive" binding between inputs and outputs and extensive
+prebuilt widgets make it possible to build beautiful, responsive, and
+powerful applications with minimal effort.
