@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/09 20:52:49 brook Exp $
+
+SHA1 (R/shiny_1.3.2.tar.gz) = 892161e80b3cd31fab3b9c963cb571f659e4ea74
+RMD160 (R/shiny_1.3.2.tar.gz) = 829a0181e596694c07a9628528858aa44521c503
+SHA512 (R/shiny_1.3.2.tar.gz) = 0cb701f290cb263a136b0e8dd2b4b240f3375e8e539aa10449d915e4e75489068670234f9b37b71f9b689b963cc994c466ce2a94fe2ac0f91e96a77c9e47ec43
+Size (R/shiny_1.3.2.tar.gz) = 2991469 bytes
