@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3373 2019/08/09 20:26:46 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3374 2019/08/09 20:52:49 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5496,3 +5496,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added sysutils/R-later version 0.8.0 [brook 2019-08-09]
 	Added parallel/R-promises version 1.0.1 [brook 2019-08-09]
 	Added www/R-httpuv version 1.5.1 [brook 2019-08-09]
+	Added www/R-shiny version 1.3.2 [brook 2019-08-09]
